x-pack/plugins/lens/public/editor_frame_service/editor_frame/_workspace_panel_wrapper.scss
.lnsWorkspacePanelWrapper {
  @include euiScrollBar;
  overflow: hidden;
  // Override panel size padding
  padding: 0 !important; // sass-lint:disable-line no-important
  margin-bottom: $euiSize;
  display: flex;
  flex-direction: column;

  .lnsWorkspacePanelWrapper__pageContentHeader {
    @include euiTitle('xs');
    padding: $euiSizeM;
    // override EuiPage
    margin-bottom: 0 !important; // sass-lint:disable-line no-important
  }

  .lnsWorkspacePanelWrapper__pageContentHeader--unsaved {
    color: $euiTextSubduedColor;
  }

  .lnsWorkspacePanelWrapper__pageContentBody {
    @include euiScrollBar;
    flex-grow: 1;
    display: flex;
    align-items: stretch;
    justify-content: stretch;
    overflow: auto;
    position: relative;

    > * {
      flex: 1 1 100%;
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: hidden;
    }
  }
}

